add Docker support

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -93,6 +93,9 @@
 	</dependencies>
 
 	<build>
+
+		<finalName>magical-drones-app</finalName>
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
