--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -43,8 +43,34 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ vars.AWS_REGION }}
         run: |
+          TASK_DEFINITION=$(aws ecs describe-task-definition \
+            --task-definition ${{ vars.ECS_TASK_DEFINITION_NAME }} \
+            --region ${{ vars.AWS_REGION }})
+
+          NEW_TASK_DEFINITION=$(echo "$TASK_DEFINITION" | jq \
+            '.taskDefinition | .containerDefinitions[0].image="${{ vars.ECR_REPOSITORY_URI }}:$GITHUB_SHA" | \
+            del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
+
+          NEW_TASK_INFO=$(aws ecs register-task-definition --region ${{ vars.AWS_REGION }} \
+            --cli-input-json "$NEW_TASK_DEFINITION")
+          
+          NEW_REVISION=$(echo $NEW_TASK_INFO | jq '.taskDefinition.revision')
+          
           aws ecs update-service \
             --cluster ${{ vars.ECS_CLUSTER_NAME }} \
             --service ${{ vars.ECS_SERVICE_NAME }} \
-            --force-new-deployment \
-            --region ${{ vars.AWS_REGION }}
+            --task-definition ${{ vars.ECS_TASK_DEFINITION_NAME }}:${NEW_REVISION} \
+            --region ${{ vars.AWS_REGION }} \
+            --force-new-deployment
+
+#      - name: Deploy to ECS
+#        env:
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          AWS_REGION: ${{ vars.AWS_REGION }}
+#        run: |
+#          aws ecs update-service \
+#            --cluster ${{ vars.ECS_CLUSTER_NAME }} \
+#            --service ${{ vars.ECS_SERVICE_NAME }} \
+#            --force-new-deployment \
+#            --region ${{ vars.AWS_REGION }}
