--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -48,7 +48,7 @@ jobs:
             --region ${{ vars.AWS_REGION }})
 
           NEW_TASK_DEFINITION=$(echo "$TASK_DEFINITION" | jq \
-            --arg IMAGE "${{ vars.ECR_REPOSITORY_URI }}:$GITHUB_SHA" \
+            --arg IMAGE "${{ vars.ECR_REPOSITORY_URI }}:${{ github.sha }}" \
             '.taskDefinition | .containerDefinitions[0].image=$IMAGE | \
             del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
 
