--- a/.github/workflows/deploy-backend.yaml
+++ b/.github/workflows/deploy-backend.yaml
@@ -49,7 +49,7 @@ jobs:
 
           NEW_TASK_DEFINITION=$(echo "$TASK_DEFINITION" | jq \
             --arg IMAGE "${{ vars.ECR_REPOSITORY_URI }}:${{ github.sha }}" \
-            '.taskDefinition | .containerDefinitions[0].image = $IMAGE | \
+            '.taskDefinition | .containerDefinitions[0].image=$IMAGE |
             del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
 
           NEW_TASK_INFO=$(aws ecs register-task-definition --region ${{ vars.AWS_REGION }} \
