--- a/.github/workflows/workflow-backend.yaml
+++ b/.github/workflows/workflow-backend.yaml
@@ -1,4 +1,4 @@
-name: Backend App Workflow
+name: Backend app tests
 
 on:
   pull_request:
@@ -9,8 +9,8 @@ on:
 
 jobs:
   test:
+    name: Run tests
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
