--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -29,6 +29,20 @@ aws:
     bucket: ${MD_S3_BUCKET}
     bucket-test: ${MD_S3_BUCKET_TEST}
 
-rsa:
-  private-key: classpath:certs/private.pem
-  public-key: classpath:certs/public.pem
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+            - health
+            - info
+  info:
+    env:
+      enabled: true
+
+info:
+  app:
+    name: Magical Drones backend service
+    description: A backend web service for the Magical Drones project
+    version: @project.version@
