--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>dev.jlynx</groupId>
 	<artifactId>magicaldrones</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0</version>
 
 	<name>magical-drones-webapp</name>
 <!--	todo: change description -->
