--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -5,5 +5,5 @@ SECURE_COOKIES=false
 COOKIE_DOMAIN=localhost
 
 # API settings
-# API_URL=http://localhost:8080/v1
-API_URL=http://magical-drones-app-alb-913032659.us-east-1.elb.amazonaws.com/v1
+API_URL=http://localhost:8080/v1
+# API_URL=http://magical-drones-app-alb-913032659.us-east-1.elb.amazonaws.com/v1
