--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,7 +2,7 @@ NEXT_PUBLIC_PROFILE=prod
 
 # Cookie settings
 SECURE_COOKIES=true
-COOKIE_DOMAIN=magicaldrones.jlynx.dev # This domain may change
+COOKIE_DOMAIN=magicaldrones.vercel.app # This domain may change
 
 # API settings
-API_URL=https://magical-drones-app-alb-913032659.us-east-1.elb.amazonaws.com/v1
+API_URL=http://magical-drones-app-alb-913032659.us-east-1.elb.amazonaws.com/v1
