--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,11 +11,10 @@
 
 	<groupId>dev.jlynx</groupId>
 	<artifactId>magicaldrones</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.1</version>
 
-	<name>magical-drones-webapp</name>
-<!--	todo: change description -->
-	<description>A web application for the Magical Drones project</description>
+	<name>Magical Drones backend service</name>
+	<description>A backend web service for the Magical Drones project.</description>
 	<url/>
 	<licenses>
 		<license/>
