update backend api domain

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -5,4 +5,4 @@ SECURE_COOKIES=true
 COOKIE_DOMAIN=magicaldrones.vercel.app # This domain may change
 
 # API settings
-API_URL=http://magical-drones-app-alb-913032659.us-east-1.elb.amazonaws.com/v1
+API_URL=https://api.magicaldrones.jlynx.dev/v1
