increase server connection timeout

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -8,8 +8,12 @@ spring:
       path: /v1
   servlet:
     multipart:
-      max-file-size: 10MB
-      max-request-size: 10MB
+      max-file-size: 100MB
+      max-request-size: 100MB
+
+server:
+  tomcat:
+    connection-timeout: 120000
 
   datasource:
     url: ${MD_DB_URL}
